@@ -8,7 +8,7 @@ importFrom("parallel", "stopCluster", "makeCluster", "detectCores")
 importFrom("doParallel","registerDoParallel")
 importFrom("foreach","foreach","%dopar%", "%:%")
 export(odpc)
-export(components.odpcs)
+export(components_odpcs)
 export(plot.odpc)
 export(forecast.odpcs)
 export(cv.odpc)
@@ -21,4 +21,3 @@ S3method("is", "odpcs")
 S3method("print", "odpcs")
 S3method("fitted", "odpcs")
 S3method("forecast", "odpcs")
-S3method("components", "odpcs")
