@@ -1,14 +1,14 @@
-\name{components.odpcs}
-\alias{components.odpcs}
+\name{components_odpcs}
+\alias{components_odpcs}
 \title{Get One-Sided Dynamic Principal Components From an odpcs Object}
 \description{
 Get One-Sided Dynamic Principal Components from an \code{odpcs} object.
 }
 
 
-\usage{
-\method{components}{odpcs}(object, which_comp = 1)
-}
+
+\usage{components_odpcs(object, which_comp = 1)}
+
 \arguments{
   \item{object}{An object of class \code{odpcs}, usually the result of \link{odpc}.}
   \item{which_comp}{Numeric vector indicating which components to get. Default is 1.}
@@ -33,7 +33,7 @@ Get One-Sided Dynamic Principal Components from an \code{odpcs} object.
     x[, i] <- 10 * sin(2 * pi * (i/m)) * f[1:T] + 10 * cos(2 * pi * (i/m)) * f[2:(T + 1)] + u[, i]
   }
   fit <- odpc(x, ks = matrix(c(1, 1, 1, 0), 2, 2))
-  comps <- components.odpcs(fit, which_comp = c(1, 2))
+  comps <- components_odpcs(fit, which_comp = c(1, 2))
 }
 
 \keyword{ts}
