@@ -1,8 +1,9 @@
 odpc 2.0.3
 ==============
 
-* Add "gradient" optimization method, that alternates between solving least-squares problems for computing the loadings matrix and doing gradient descent steps for updating the vector of coefficients that defines the dynamic principal component. This is the new default when the dimension of the input matrix is greater than 10 and provides huge (up to ~400x) performance boosts for matrices with a large number of
-columns.
+* Add "gradient" optimization method, that alternates between solving least-squares problems for computing the loadings matrix and doing gradient descent steps for updating the vector of coefficients that defines the dynamic principal component. This is the new default when the dimension of the input matrix is greater than 10 and provides huge (up to ~400x) performance boosts for matrices with a large number of columns.
+* Fix bug in forecast.odpcs when add_residuals=TRUE.
+* Don't make components generic, rename to components_odpcs.
 
 odpc 2.0.2
 ==============
